--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -12,17 +12,17 @@ body, .app {
 
 /* main page */
 
-.list-books-title {
+/* .list-books-title {
   padding: 10px 0;
   background: #2e7c31;
   text-align: center;
-}
+} */
 
-.list-books-title h1 {
+/* .list-books-title h1 {
   font-weight: 400;
   margin: 0;
   color: white;
-}
+} */
 
 .list-books-content {
   padding: 0 0 80px;
@@ -59,7 +59,7 @@ body, .app {
   height: 50px;
   border-radius: 50%;
   background: #2e7d32;
-  background-image: url('./icons/add.svg');
+  background-image: url('../icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 28px;
@@ -104,7 +104,7 @@ body, .app {
   left: 15px;
   width: 50px;
   height: 53px;
-  background-image: url('./icons/arrow-back.svg');
+  background-image: url('../icons/arrow-back.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 28px;
@@ -170,7 +170,7 @@ button:active {
   height: 40px;
   border-radius: 50%;
   background: #60ac5d;
-  background-image: url('./icons/arrow-drop-down.svg');
+  background-image: url('../icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px;
