builded static version with functional components

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -39,9 +39,9 @@ body, .app {
   }
 }
 
-.bookshelf-title {
+/* .bookshelf-title {
   border-bottom: 1px solid #dedede;
-}
+} */
 
 .bookshelf-books {
   text-align: center;
